Removed fitbit from title

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="CS 181 Fitbit Final Project">
+    <meta name="description" content="CS 181 Final Project">
     <meta name="author" content="Caileigh Marshall">
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-    <title>CS 181 Project - Fitbit</title>
+    <title>CS 181 Project</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
